[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "MIT or Apache-2.0"
name = "propan"
version = "0.1.2"

[dependencies]
clap = "2.28.0"
derive_builder = "0.5.1"
failure = "0.1.1"
failure_derive = "0.1.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.2"
itertools = "0.7.3"
piston = "0.36.0"
piston2d-gfx_graphics = "0.51.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.46.0"
serde = "1.0.20"
serde_derive = "1.0.20"
serde_json = "1.0.6"

[dependencies.conrod]
features = ["piston"]
version = "0.59.0"

[dependencies.nalgebra]
features = ["serde-serialize"]
version = "0.16.0"
