[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "MIT or Apache-2.0"
name = "propan"
version = "0.1.2"

[dependencies]
clap = "2.32.0"
derive_builder = "0.6.0"
failure = "0.1.2"
failure_derive = "0.1.2"
gfx = "0.17.1"
gfx_device_gl = "0.15.3"
itertools = "0.7.8"
piston = "0.37.0"
piston2d-gfx_graphics = "0.52.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.48.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"

[dependencies.conrod]
features = ["piston"]
version = "0.61.1"

[dependencies.nalgebra]
features = ["serde-serialize"]
version = "0.16.5"
